--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,6 +1,7 @@
 #root {
     --main-bg-color: #303254;
     --main-color: #797dd4;
+    --main-color-selected: #ceb1e2;
     --main-color-dim: #8689c3;
     --color-green: #79d489;
     --color-red: #d47979;
@@ -23,6 +24,10 @@ a:link {
 
 a:visited {
     color: var(--main-color);
+}
+
+.d-none {
+    display: none;
 }
 
 #error-page {
@@ -77,17 +82,9 @@ a:visited {
 
 .presonal-container table {
     width: 100%;
-    font-size: 20px;
+    font-size: 22px;
     border-collapse: collapse;
-}
-
-.presonal-container table td {
-    display: table-cell;
-    vertical-align: inherit;
-    font-weight: lighter;
-    text-align: center;
-    border: 2px solid var(--main-color-dim);
-    padding: .5rem;
+    table-layout: fixed;
 }
 
 .color-red {
@@ -128,4 +125,95 @@ a:visited {
 
 .ill:hover:after {
     width: 100%;
+}
+
+.table-cell-text {
+    display: table-cell;
+    vertical-align: inherit;
+    text-align: center;
+    border: 2px solid var(--main-color-dim);
+    padding: .5rem;
+}
+
+.table-cell-input {
+    display: table-cell;
+    vertical-align: inherit;
+    text-align: center;
+    border: 2px solid var(--main-color-dim);
+}
+
+.table-cell-input input {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 2rem;
+    border: none;
+    text-align: center;
+    font-size: 20px;
+    background: var(--main-bg-color);
+    font-weight: bold;
+    color: var(--main-color-selected);
+    animation: color-change 0.5s;
+}
+
+@keyframes color-change {
+    0% {
+        color: var(--main-color);
+    }
+
+    100% {
+        color: var(--main-color-selected);
+    }
+}
+
+.table-cell-input input:focus {
+    outline: none;
+}
+
+.post-container {
+    position: relative;
+}
+
+.post-container div {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.post-container div b {
+    cursor: pointer;
+    transition: 1s;
+}
+
+.post-container div b:hover {
+    color: var(--main-color-selected);
+}
+
+.table-cell-text .cross {
+    font-size: 14px;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.table-cell-text .cross:hover {
+    animation: rotatation 1s;
+    color: var(--main-color-selected);
+}
+
+@keyframes rotatation {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+tfoot {
+    visibility: hidden;
+    transition: 0.5s;
+}
+
+tfoot:hover {
+    visibility: inherit;
 }
