--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -94,14 +94,13 @@ a:visited {
     width: 2.5rem;
 }
 
-.personal-string td:last-child {
+.personal-string td:last-child div {
+    position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .personal-string td:last-child b {
-    margin-top: .25rem;
     cursor: pointer;
     transition: 0.5s;
 }
@@ -195,6 +194,23 @@ a:visited {
 
 .post-container {
     position: relative;
+    max-height: 15rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.post-container::-webkit-scrollbar {
+    width: 9px;
+}
+
+.post-container::-webkit-scrollbar-track {
+    background: var(--main-color);
+}
+
+.post-container::-webkit-scrollbar-thumb {
+    background-color: var(--main-bg-color);
+    border-radius: 20px;
+    border: 2px solid var(--main-color);
 }
 
 .post-container div {
@@ -204,12 +220,26 @@ a:visited {
 }
 
 .post-container div b {
+    text-overflow: ellipsis;
+    overflow: hidden;
     cursor: pointer;
     transition: 1s;
+
+    border-bottom: 3px dashed var(--main-color);
+    margin-bottom: .25rem;
+    padding-bottom: .25rem;
 }
 
 .post-container div b:hover {
     color: var(--main-color-selected);
+}
+
+.post-cell-text {
+    padding: 0;
+}
+
+.post-cell-text div {
+    padding: .5rem;
 }
 
 .table-cell-text .cross {
@@ -219,6 +249,11 @@ a:visited {
     z-index: 1;
     cursor: pointer;
     transition: 1s;
+}
+
+.post-cell-text .cross {
+    position: absolute;
+    right: .5rem;
 }
 
 .table-cell-text .cross:hover {
@@ -278,7 +313,8 @@ tfoot:hover {
     transition: 0.5s;
 }
 
-#add-worker {
+#add-worker,
+#add-post {
     left: 12.5%;
     top: 12.5%;
     z-index: 1;
@@ -291,7 +327,8 @@ tfoot:hover {
     justify-content: center;
 }
 
-#add-worker .cross {
+#add-worker .cross,
+#add-post .cross {
     font-size: 25px;
     position: inherit;
     top: 3.5%;
@@ -299,12 +336,16 @@ tfoot:hover {
     cursor: pointer;
 }
 
-#add-worker .cross:hover {
+#add-worker .cross:hover,
+#add-post .cross:hover {
     animation: rotatation 1s;
 }
 
-#add-worker form {
-    margin-top: 5%;
+#add-worker form,
+#add-post form {
+    margin: 4% 0;
+    padding: 0 4%;
+    border: 5px solid var(--main-bg-color);
     width: 75%;
     display: flex;
     flex-direction: column;
@@ -359,8 +400,11 @@ tfoot:hover {
     background-color: red;
 }
 
+#add-worker form div:last-child {
+    margin: 2.5rem 0;
+}
+
 #add-worker form button {
-    margin-bottom: 5rem;
     border: none;
     height: 2.5rem;
     width: 100%;
@@ -369,4 +413,73 @@ tfoot:hover {
     color: var(--main-color);
     font-size: 25px;
     font-weight: bold;
+}
+
+#logo-container {
+    display: flex;
+    position: absolute;
+    width: 100vw;
+    height: 85vh;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+
+#logo-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+#logo-container div h4 {
+    margin: 0;
+}
+
+#logo-container h1 {
+    margin-bottom: 0;
+    font-size: 64px;
+}
+
+#logo-container b {
+    transform: rotate(45deg);
+    font-size: 300px;
+    font-weight: bold;
+    border: 5px solid;
+    border-radius: 161px;
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    50% {
+        transform: rotate(45deg) scale(1.2);
+    }
+
+    100% {
+        transform: rotate(45deg) scale(1);
+    }
+}
+
+#post-table th:first-child {
+    width: 15%;
+}
+
+#post-table td {
+    text-align: center;
+}
+
+.post-string {
+    transition: 0.5s;
+}
+
+.post-string:hover {
+    font-size: 26px;
+}
+
+.post-string .table-cell-text,
+.post-string .table-cell-input {
+    border: none;
+}
+
+.post-string .table-cell-input input {
+    font-size: 26px;
 }
