--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,5 +1,6 @@
 #root {
     --main-bg-color: #303254;
+    --main-bg-shadow: #1b1c39;
     --main-color: #797dd4;
     --main-color-selected: #ceb1e2;
     --main-color-dim: #8689c3;
@@ -486,4 +487,37 @@ tfoot:hover {
 
 .post-string .table-cell-input input {
     font-size: 26px;
+}
+
+#call-container {
+    display: flex;
+    padding: 5% 5% 0 5%;
+}
+
+.call-card {
+    display: flex;
+    flex-direction: column;
+    background: var(--main-color);
+    color: var(--main-bg-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 10px 10px 5px var(--main-bg-shadow);
+    transition: 0.5s;
+}
+
+.call-card:hover {
+    box-shadow: 15px 15px 7px var(--main-bg-shadow);
+    transform: translateY(-5px);
+}
+
+.call-card .patient, .call-card .info {
+    display: flex;
+    flex-direction: column;
+    margin: .5rem;
+}
+
+.call-card .call-status {
+    padding: .5rem;
+
+    background-color: var(--main-bg-color);
+    color: var(--main-color);
 }
