--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -689,6 +689,7 @@ tfoot:hover {
     font-size: 16px;
     transition: 1s;
     margin: 2rem;
+    height: max-content;
 }
 
 .brigade-container:hover {
